# sui

./: .gitignore  Makefile  README.md  rebar.config
config/: test.config
crates/: build_crates.sh
crates/sui/: Cargo.toml  build.rs  libpath
crates/sui-keys/: Cargo.toml  sui.log.2023-04-01
crates/sui-keys/src/: base_types.rs  crypto.rs  key_derive.rs  lib.rs  sui_error.rs
crates/sui-keys/tests/: tests.rs
crates/sui/benches/: bench.rs
crates/sui/src/: lib.rs  nif.rs  options.rs
crates/sui/tests/: sui_test.rs
src/: sui.app.src  sui.erl  sui_app.erl  sui_nif.erl  sui_sup.erl
test/ct/: sui_SUITE.erl
test/eunit/: sui_test.erl
