[package]
name = "sui-keys"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
signature = "1.6.0"
rand = "0.8.5"
tiny-bip39 = "1.0.0"
bip32 = "0.4.0"
slip10_ed25519 = "0.1.3"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "54c0db503f35560ed25b2d084fface8acdd8ee96", features = ["copy_key"] }
serde_with = "2.1.0"
schemars ="0.8.10"
thiserror = "1.0.34"
strum_macros = "^0.24"
derive_more = "0.99.17"
eyre = "0.6.8"
strum = "^0.24"


[dev-dependencies]
tempfile = "3.3.0"
